--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "aos": "^2.3.4",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.6",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
