--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "aos": "^2.3.4",
+    "bad-words": "^4.0.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.6",
     "i18next": "^25.3.2",
