--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mi-portafolio-react",
   "version": "1.0.0",
-  "description": "Proyecto de portafolio para aprender React",
+  "description": "Proyecto de portafolio",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
@@ -11,10 +11,6 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "aos": "^2.3.4",
