--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://luis-alvarezf10.github.io/portafolio-personal",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
@@ -17,6 +20,7 @@
     "bad-words": "^4.0.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.23.6",
+    "gh-pages": "^6.3.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
